# thymio-project

./: README.md  Running the Thymio.txt  Temp_Sensor_with_ubuntu_server.txt  comm_peer_wifi_1.py  comm_peer_wifi_2.py  communicating.py  fastdds_guide.md  guide_running _vicon.md  ips_master.csv  nonblocking_comm_move.py  print_temp.py  prox_and_led_test.py  running_ros_node.txt  thymio_and_ip_list.txt  vicon-subject-creation.md  vicon_pattern.py  with_robot_control.py
Stuff from Simay/: IAR2_ML.py
backup_due_to_achitechture_change/before_adding_global_frame/src/vicon_interfaces/: CMakeLists.txt  package.xml
main_code/: collision_avoid.py  move_robot.py  nonblocking_comm.py  random_move_robot.py  read_temp.py  test.py  test_timed_comms.py
ros2_ws/: 11-custom-wlan.yaml  50-cloud-init.yaml  all_go_charge.sh  build_setup_program_execution.sh  charging_destinatins.json  commands_temp.txt  copy_logs.sh  cps-50-cloud-init.yaml  fastdds_guide.md  four_ip_add_route.sh  ips.csv  kill_ros_nodes.sh  launch_wind_all.sh  no_build_setup_program_execution.sh  restart_all.sh  run_publish_wind.sh  run_random_move.sh  setup-ros2-discovery.sh  shutdown_all.sh  simple_robot_control.py  stop_system_command.sh  test_robot_control.py  test_time.py  three_ip_add_route.sh  two_router_fastdds.xml  uninformed_mapping.json  vicon_angle_correction.json  wifi_id_mappings.json
run_experiment_data/: avg_opinion_ir1.0.pkl  avg_opinion_ir_4_uninf.pkl  plot_multiple_runs.py  plot_opinion.py  sd_plots.py
two_router_data/: compute_average_and_plot.py  fft_freq_spectrum_plot.py  plot_opinion copy.py  (+9 more)
(+1456 files in other folders)
